--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <img class="form_logo" src="logo_67.png">
         <p class="max_titel">Gilde DevOps contact formulier</p>
         <div></div>
-             
+    </div>
+    <div class="begin_from">
+    <label for="naam" class="form_naam">Naam</label>
+    <input type="text" id="naam" name="naam" placeholder="naam" class="input_text_form">
 
-       
+
     </div>
 </body>
 </html>
