text box gemaakt

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <div class="begin_from">
     <label for="naam" class="form_naam">Naam</label>
     <input type="text" id="naam" name="naam" placeholder="naam" class="input_text_form">
+    </div>
+    <div class="form_feedback_textbox">
+    <p><label for="andere_feedback" class="from_andere_feedback">andere feedback</label></p>
+    <textarea id="andere_feedback" name="andere_feedback" rows="7" cols="70"></textarea>
+    </div>
 
 
     </div>
