--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
      
     <div class="max_navbar">
-        <img class="form_logo" src="logo_67.png">
+        <img class="form_logo" src="logo.png">
         <p class="max_titel">Gilde DevOps contactformulier</p>
         <div></div>
     </div>
